--- a/index.html
+++ b/index.html
@@ -67,7 +67,31 @@
                 <button class="next-slide">Next</button>
             </div>
          </div>
-
+    
+          <div id="carouselExampleControls" class="carousel slide " data-ride="carousel">
+            <div class="carousel-inner container my-2">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="images/image7.jpg " height="90%" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="images/image8.jpeg"height="90%" alt="Second slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="images/image9.jpg" height="90%"alt="Third slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="images/background.jpg" height="90%"alt="Third slide">
+              </div>
+            </div>
+            <a class="carousel-control-prev"  href="#carouselExampleControls" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only" >Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
            
 
           <!-- start home -->
