--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
           <!-- start slideshow  -->
 
-         <div class="slider-container">
+<!--          <div class="slider-container">
             <div class="slider">
                 <div class="slide active" style="background-image:url(images/image7.jpg);"></div>
                 <div class="slide " style="background-image:url(images/image8.jpeg);"></div>
@@ -66,7 +66,7 @@
                 <button class="prev-slide">Prev</button>
                 <button class="next-slide">Next</button>
             </div>
-         </div>
+         </div> -->
     
           <div id="carouselExampleControls" class="carousel slide " data-ride="carousel">
             <div class="carousel-inner container my-2">
